--- a/LuBox.Console/LuBox.Console.csproj
+++ b/LuBox.Console/LuBox.Console.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D37E3A10-6D55-4190-92CC-A0FBA80DAE7B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NuBox.Console</RootNamespace>
-    <AssemblyName>NuBox.Console</AssemblyName>
+    <RootNamespace>LuBox.Console</RootNamespace>
+    <AssemblyName>LuBox.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,7 +48,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NuBox\NuBox.csproj">
+    <ProjectReference Include="..\LuBox\LuBox.csproj">
       <Project>{BA0D0859-8331-4E87-A8AF-FCDB5CA85C17}</Project>
       <Name>NuBox</Name>
     </ProjectReference>
