--- a/LuBox.Test/LuBox.Test.csproj
+++ b/LuBox.Test/LuBox.Test.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ArithmeticTests.cs" />
     <Compile Include="EnvironmentTests.cs" />
     <Compile Include="FunctionTests.cs" />
+    <Compile Include="LocalVariableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MethodAndPropertiesTests.cs" />
   </ItemGroup>
