--- a/LuBox/LuBox.csproj
+++ b/LuBox/LuBox.csproj
@@ -68,7 +68,7 @@
     <Compile Include="GeneratedParserBase\NuParser.cs" />
     <Compile Include="GeneratedParserBase\NuVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Sandboxer.cs" />
+    <Compile Include="Sandboxing\Sandboxer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
