--- a/LuBox/LuBox.csproj
+++ b/LuBox/LuBox.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LuEnvironment.cs" />
     <Compile Include="LuSandboxException.cs" />
     <Compile Include="Runtime\LuBoolConvertBinder.cs" />
     <Compile Include="Runtime\LuConvertBinder.cs" />
@@ -49,6 +50,7 @@
     <Compile Include="Runtime\LuEventWrapperMetaObject.cs" />
     <Compile Include="Runtime\LuFunction.cs" />
     <Compile Include="Runtime\LuFunctionMetaObject.cs" />
+    <Compile Include="Runtime\LuGetIndexBinder.cs" />
     <Compile Include="Runtime\LuGetMemberBinder.cs" />
     <Compile Include="Runtime\LuInvokeBinder.cs" />
     <Compile Include="Runtime\LuInvokeHelper.cs" />
@@ -75,7 +77,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Library\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
