Prepare for null propagation operator.

--- a/LuBox.Parser/LuBox.ParserGenerator.csproj
+++ b/LuBox.Parser/LuBox.ParserGenerator.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Antlr4 Include="Nu.g4">
       <Generator>MSBuild:Compile</Generator>
-      <CustomToolNamespace>NuBox.Parser</CustomToolNamespace>
+      <CustomToolNamespace>LuBox.Parser</CustomToolNamespace>
     </Antlr4>
   </ItemGroup>
   <ItemGroup>
