Added lambda en generic method invokation support

--- a/LuBox.Test/LuBox.Test.csproj
+++ b/LuBox.Test/LuBox.Test.csproj
@@ -59,6 +59,8 @@
     <Compile Include="EnumTest.cs" />
     <Compile Include="ClosureTests.cs" />
     <Compile Include="ConditionalInvokeGetTests.cs" />
+    <Compile Include="LambdaTests.cs" />
+    <Compile Include="GenericMethodsTests.cs" />
     <Compile Include="ParsingOutputTests.cs" />
     <Compile Include="LocalTests.cs" />
     <Compile Include="LuTableTests.cs" />
